Build: Move to AGP 9, compileSdk 37 and JDK 25